@@ -495,14 +495,13 @@ class DB_FileMaker_FX extends DB_AuthCommon implements DB_Access_Interface
         $childRecordIdValue = null;
         if ($this->dbSettings->getExtraCriteria()) {
             foreach ($this->dbSettings->getExtraCriteria() as $condition) {
-                if ($condition['field'] == '__operation__' && $condition['operator'] == 'or') {
+                if ($condition['field'] == '__operation__' && strtolower($condition['operator']) == 'or') {
+                    $this->fx->SetLogicalOR();
+                } else if ($condition['field'] == '__operation__' && strtolower($condition['operator']) == 'ex') {
                     $this->fx->SetLogicalOR();
                 } else {
-                    $op = $condition['operator'] == '=' ? 'eq' : $condition['operator'];
-                    if ($condition['field'] == "-recid" && $condition['operator'] == 'undefined') {
-                        $op = "eq";
-                    }
-                    if (!$this->isPossibleOperator($op)) {
+                    $condition = $this->normalizedCondition($condition);
+                    if (!$this->isPossibleOperator($condition['operator'])) {
                         throw new Exception("Invalid Operator.: {$condition['field']}/{$condition['operator']}");
                     }
 
@@ -512,7 +511,7 @@ class DB_FileMaker_FX extends DB_AuthCommon implements DB_Access_Interface
                         $this->queriedPrimaryKeys = array($condition['value']);
                     }
 
-                    $this->fx->AddDBParam($condition['field'], $condition['value'], $op);
+                    $this->fx->AddDBParam($condition['field'], $condition['value'], $condition['operator']);
                     $hasFindParams = true;
                     if ($condition['field'] == $this->getDefaultKey()) {
                         $this->fx->FMSkipRecords(0);
@@ -1855,6 +1854,39 @@ class DB_FileMaker_FX extends DB_AuthCommon implements DB_Access_Interface
     public function isPossibleOrderSpecifier($specifier)
     {
         return !(array_search(strtoupper($specifier), array('ASCEND', 'DESCEND', 'ASC', 'DESC')) === FALSE);
+    }
+
+    public function normalizedCondition($condition)
+    {
+        /* for FileMaker Server */
+        if (($condition['field'] == "-recid" && $condition['operator'] == 'undefined') 
+                 || ($condition['operator'] == '=')) {
+            return array(
+                'field' => $condition['field'],
+                'operator' => 'eq',
+                'value' => "{$condition['value']}",
+            );
+        } else if ($condition['operator'] == 'match*') {
+            return array(
+                'field' => $condition['field'],
+                'operator' => 'bw',
+                'value' => "{$condition['value']}",
+            );
+        } else if ($condition['operator'] == '*match') {
+            return array(
+                'field' => $condition['field'],
+                'operator' => 'ew',
+                'value' => "{$condition['value']}",
+            );
+        } else if ($condition['operator'] == '*match*') {
+            return array(
+                'field' => $condition['field'],
+                'operator' => 'cn',
+                'value' => "{$condition['value']}",
+            );
+        } else {
+            return $condition;
+        }
     }
 
     protected function _adjustSortDirection($direction)
