@@ -1,0 +1,62 @@
+<!DOCTYPE html>
+<!--
+/*
+ * INTER-Mediator Ver.@@@@2@@@@ Released @@@@1@@@@
+ * 
+ *   by Masayuki Nii  msyk@msyk.net Copyright (c) 2010-2014 Masayuki Nii, All rights reserved.
+ * 
+ *   This project started at the end of 2009.
+ *   INTER-Mediator is supplied under MIT License.
+ */  -->
+<html>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>INTER-Mediator - Sample - Search/FileMaker Server</title>
+    <link rel="stylesheet" type="text/css" href="../../sample.css">
+    <link rel="stylesheet" type="text/css" href="../search.css">
+    <script type="text/javascript" src="search_def.php"></script>
+</head>
+<body onload="INTERMediator.construct()">
+<div>
+    検索条件:
+    <input type="text" data-im="_@condition:postalcode:f3,f7,f8,f9:*match*">
+    表示件数：
+    <select type="text" data-im="_@limitnumber:postalcode">
+        <option value="4">4</option>
+        <option value="10">10</option>
+        <option value="20" selected>20</option>
+    </select>
+    <button data-im="_@update:postalcode">search</button>
+</div>
+<div id="IM_NAVIGATOR">Navigation Controls by INTER-Mediator</div>
+<table border="1" id="resultTable">
+    <thead>
+    <tr>
+        <th>郵便番号
+            <span style="cursor: pointer" data-im="_@addorder:postalcode:f3:asc">▲</span>
+            <span style="cursor: pointer" data-im="_@addorder:postalcode:f3:desc">▼</span>
+        </th>
+        <th>都道府県</th>
+        <th>市区町村</th>
+        <th>町域名
+            <span style="cursor: pointer" data-im="_@addorder:postalcode:f9:asc">▲</span>
+            <span style="cursor: pointer" data-im="_@addorder:postalcode:f9:desc">▼</span>
+        </th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr>
+        <td><div data-im="postalcode@f3"></div></td>
+        <td><div data-im="postalcode@f7"></div></td>
+        <td><div data-im="postalcode@f8"></div></td>
+        <td><div data-im="postalcode@f9"></div></td>
+    </tr>
+    <tr data-im-control="noresult">
+        <td colspan="4">検索結果はありません。あるいは検索前です。</td>
+    </tr>
+    </tbody>
+</table>
+
+</body>
+</html>
