@@ -180,7 +180,9 @@
             <a href="Practices/search_page.html">search</a>
             <a href="Practices/search_bind.html">search w/bind</a>
         </td>
-        <td></td>
+        <td>
+            <a href="Practices/FileMaker/search_page.html">search</a>
+        </td>
         <td></td>
         <td></td>
     </tr>
